--- a/html/doorDigital.html
+++ b/html/doorDigital.html
@@ -22,7 +22,7 @@
         </div>
         <div class="header-menu">
           <ul>
-            <a href="/index.html" class="home" ><li >Home</li></a>
+            <a href="/html/index.html" class="home" ><li >Home</li></a>
            <a href="assets/CV_Thales_Varga_Front-End.pdf" target="_blank" rel="noopener noreferrer"></a><li>Download CV</li></a>
           </ul>
         </div>
