--- a/html/embreve.html
+++ b/html/embreve.html
@@ -19,7 +19,8 @@
         </div>
         <div class="header-menu">
           <ul>
-            <a href="./index.html"><li data-section="home">Home</li></a>
+            <a href="/html/index.html"><li data-section="home">Home</li></a>
+            <a href="/html/index.html#trabalhos"><li data-section="trabalhos">Trabalhos</li></a>
           </ul>
         </div>
 </header>
