correcoes de caminho de arquivos

--- a/html/doorDigital.html
+++ b/html/doorDigital.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/doorDigital.css">
-  <link rel="stylesheet" href="css/header.css" />
-  <link rel="stylesheet" href="css/footer.css" />
+  <link rel="stylesheet" href="/css/doorDigital.css">
+  <link rel="stylesheet" href="/css/header.css" />
+  <link rel="stylesheet" href="/css/footer.css" />
   <title>Portfólio - Redesign UX/UI para Door Digital</title>
 </head>
 <body>
