--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/sobremim.css" />
-    <link rel="stylesheet" href="../css../contato.css" />
+    <link rel="stylesheet" href="../css/contato.css" />
     <link rel="stylesheet" href="../css/experiencia.css" />
     <link rel="stylesheet" href="../css/trabalhosRealizados.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/dnx5lfu.css" />
+    <link rel="stylesheet" href="..https://use.typekit.net/dnx5lfu.css" />
 
     <script src="../landingpage.js" defer type="module"></script>      
     <script>
@@ -22,17 +22,6 @@
     
   </head>
   <body data-tema="claro">
-    <!-- <div id="entrada-site" class="oculto conteudo-entrada">
-      <h1>
-        Thales Varga
-        <img
-          src="/assets/forma-circulo-laranja.svg"
-          alt="imagem geometrica forma-circulo"
-          class="header-imagem-circulo"
-        />
-      </h1>
-      <p>Portfólio</p>
-    </div> -->
     <header id="header">
       <div class="header-nome">
         <img
@@ -67,22 +56,22 @@
         <div class="introducao-container-imagem">
           <img
             class="introducao-imagem"
-            src="assets/Eu.png"
+            src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
           <img
             class="introducao-imagem"
-            src="assets/Eu.png"
+            src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
           <img
             class="introducao-imagem"
-            src="assets/Eu.png"
+            src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
           <img
             class="introducao-imagem-linha"
-            src="assets/Linha-home-foto.svg"
+            src="/assets/Linha-home-foto.svg"
             alt="linha vermenlha"
           />
         </div>
@@ -106,7 +95,7 @@
           >
         </div>
         <div class="sobre-mim-container">
-          <img src="assets/ellipse-sobrem-mim.svg" alt="forma de circulo" />
+          <img src="/assets/ellipse-sobrem-mim.svg" alt="forma de circulo" />
         </div>
 
         <div class="sobre-mim-descricao-parte2">
@@ -122,7 +111,7 @@
       <section id="trabalhos" class="fundo-claro">
         <p class="trabalhos-titulo">TRABALHOS</p>
         <div class="trabalhos-container">
-          <a class="trabalhos-lbc-consultoria" href="html/lbcConsultoria.html"
+          <a class="trabalhos-lbc-consultoria" href="/html/lbcConsultoria.html"
             ><strong class="trabalhos-strong">LBC </strong>&nbsp;Consultoria
             <img
               class="trabalhos-link-seta"
@@ -130,9 +119,9 @@
               alt=""
             />
           </a>
-          <img src="assets/Linha-divisao-trabalhos.svg" alt="" />
+          <img src="/assets/Linha-divisao-trabalhos.svg" alt="" />
 
-          <a class="trabalhos-door-digital" href="html/embreve.html"
+          <a class="trabalhos-door-digital" href="/html/embreve.html"
             >DOOR DIGITAL
             <img
               class="trabalhos-link-seta"
@@ -146,9 +135,9 @@
             <span class="texto">Anda<br />mento</span><br />
             <span class="tag">&lt;/div&gt;</span>
           </p>
-          <img src="assets/Linha-divisao-trabalhos.svg" alt="" />
+          <img src="/assets/Linha-divisao-trabalhos.svg" alt="" />
         </div>
-        <a class="trabalhos-skills" href="html/embreve.html">skills</a>
+        <a class="trabalhos-skills" href="/html/embreve.html">skills</a>
         <div class="trabalhos-descricao">
           <p>
             Esses são trabalhos em que uso todo o meu conhecimento, desde a
@@ -166,22 +155,22 @@
           </div>
           <img
             class="imagem-linha-horinzontal-vermelha"
-            src="assets/linha-vermelha-horizontal-experiencia.svg"
+            src="/assets/linha-vermelha-horizontal-experiencia.svg"
             alt=""
           />
           <img
             class="imagem-circulo"
-            src="assets/ellipse-experiencia.svg"
+            src="/assets/ellipse-experiencia.svg"
             alt=""
           />
           <img
             class="imagem-linha-central-preta"
-            src="assets/linha--preta-experiencia.svg"
+            src="/assets/linha--preta-experiencia.svg"
             alt=""
           />
           <img
             class="imagem-linha-vertical-vermelha"
-            src="assets/linha-vermelha-vertical-experiencia.svg"
+            src="/assets/linha-vermelha-vertical-experiencia.svg"
             alt=""
           />
         </div>
@@ -212,7 +201,7 @@
         </div>
         <div class="experiencia-download">
           <a
-            href="assets/CV_Thales_Varga_Front-End.pdf"
+            href="/assets/CV_Thales_Varga_Front-End.pdf"
             target="_blank"
             rel="noopener noreferrer"
             >download CV</a
