--- a/html/embreve.html
+++ b/html/embreve.html
@@ -19,8 +19,8 @@
         </div>
         <div class="header-menu">
           <ul>
-            <a href="../index.html"><li data-section="home">Home</li></a>
-            <a href="../index.html#trabalhos"><li data-section="trabalhos">Trabalhos</li></a>
+            <a href="/index.html"><li data-section="home">Home</li></a>
+            <a href="/index.html#trabalhos"><li data-section="trabalhos">Trabalhos</li></a>
           </ul>
         </div>
 </header>
