--- a/html/contrucao.html
+++ b/html/contrucao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
-    <title>Em Construção</title>
+    <title>Thales Varga</title>
     <style>
       body {
         display: flex;
@@ -16,7 +16,8 @@
         text-align: center;
       }
       h1 {
-        font-size: 2rem;
+        font-size: 1rem;
+        margin-bottom: 2rem;
       }
       p {
         font-size: 0.8rem;
@@ -28,7 +29,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        margin-top: 3rem;
+        margin-top: 1.5rem;
       }
 
       a {
@@ -44,6 +45,7 @@
   </head>
   <body>
     <div>
+      <h1>Thales Varga Portfólio</h1>
       <p>
         Desculpa, estou trabalhando na responsavidade, logo será atualizado para
         dispositivos menores. <br />Por favor, acesse em um dispositivo com tela
