--- a/html/lbcConsultoria.html
+++ b/html/lbcConsultoria.html
@@ -12,9 +12,9 @@
   <header id="header">
     <div class="header-menu">
       <ul>
-        <a class="link-lbc" href="../index.html"><li data-section="home">Home</li></a>
-        <a class="link-lbc" href="../index.html#trabalhos"><li data-section="trabalhos">Trabalhos</li></a>
-        <a class="link-lbc" href="../index.html#contato"><li data-section="contato">Contato</li></a>
+        <a class="link-lbc" href="/index.html"><li data-section="home">Home</li></a>
+        <a class="link-lbc" href="/index.html#trabalhos"><li data-section="trabalhos">Trabalhos</li></a>
+        <a class="link-lbc" href="/index.html#contato"><li data-section="contato">Contato</li></a>
         
       </ul>
     </div>
