--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="../css/trabalhosRealizados.css" />
     <link rel="stylesheet" href="..https://use.typekit.net/dnx5lfu.css" />
 
-    <script src="../landingpage.js" defer type="module"></script>      
+    <script src="/landingpage.js" defer type="module"></script>      
     <script>
       if (window.innerWidth <= 768) {
         console.log("Tela pequena detectada. Redirecionando...");
-        window.location.href = "html/construcao.html"; 
+        window.location.href = "/html/construcao.html"; 
       }
     </script>
     
