correcoes de caminho de arquivos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <script src="/landingpage.js" defer type="module"></script>      
     <script>
-      if (window.innerWidth <= 768) {
+      if (window.innerWidth <= 900) {
         console.log("Tela pequena detectada. Redirecionando...");
-        window.location.href = "/html/construcao.html"; 
+        window.location.href = "./html/construcao.html"; 
       }
     </script>
     
