atualizacao da pagina skills

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section id="home" class="fundo-escuro">
         <div id="introducao-home">
           <h2>
-            Desenvolvedor Front-End<br />
+            Desenvolvedor<br />
             e UX/UI Designer
           </h2>
           <p>
@@ -137,7 +137,7 @@
           </p>
           <img src="/assets/Linha-divisao-trabalhos.svg" alt="" />
         </div>
-        <a class="trabalhos-skills" href="/html/embreve.html">skills</a>
+        <a class="trabalhos-skills" href="/html/skills.html">skills</a>
         <div class="trabalhos-descricao">
           <p>
             Esses são trabalhos em que uso todo o meu conhecimento, desde a
