atualização de responsavidade

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <link rel="stylesheet" href="../css/contato.css" />
     <link rel="stylesheet" href="../css/experiencia.css" />
     <link rel="stylesheet" href="../css/trabalhosRealizados.css" />
-    <link rel="stylesheet" href="..https://use.typekit.net/dnx5lfu.css" />
 
-    <script src="/landingpage.js" defer type="module"></script>      
-    <script>
+    <script src="/landingpage.js" defer type="module"></script>
+    <!-- <script>
       if (window.innerWidth <= 900) {
         console.log("Tela pequena detectada. Redirecionando...");
-        window.location.href = "./html/construcao.html"; 
+        window.location.href = "./html/construcao.html";
       }
-    </script>
-    
+    </script> -->
   </head>
   <body data-tema="claro">
     <header id="header">
@@ -55,17 +53,17 @@
         </div>
         <div class="introducao-container-imagem">
           <img
-            class="introducao-imagem"
+            class="introducao-imagem1"
             src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
           <img
-            class="introducao-imagem"
+            class="introducao-imagem2"
             src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
           <img
-            class="introducao-imagem"
+            class="introducao-imagem3"
             src="/assets/Eu.png"
             alt="imagem de silhueta de Thales Varga"
           />
@@ -90,7 +88,9 @@
         <div class="download-cv">
           <a
             href="/assets/CV_Thales_Varga_Front-End.pdf "
-            class="sobre-mim-download-cv sobre-mim-link" target="_blank" rel="noopener noreferrer"
+            class="sobre-mim-download-cv sobre-mim-link"
+            target="_blank"
+            rel="noopener noreferrer"
             >Download CV</a
           >
         </div>
@@ -119,7 +119,7 @@
               alt=""
             />
           </a>
-          <img src="/assets/Linha-divisao-trabalhos.svg" alt="" />
+          <img src="/assets/Linha-divisao-trabalhos.svg" class="trabalhos-linhas1" alt="" />
 
           <a class="trabalhos-door-digital" href="/html/embreve.html"
             >DOOR DIGITAL
@@ -129,13 +129,13 @@
               alt=""
             />
           </a>
-        
+
           <p class="trabalhos-andamento">
             <span class="tag">&lt;div&gt;</span><br />
             <span class="texto">Anda<br />mento</span><br />
             <span class="tag">&lt;/div&gt;</span>
           </p>
-          <img src="/assets/Linha-divisao-trabalhos.svg" alt="" />
+          <img src="/assets/Linha-divisao-trabalhos.svg"  class="trabalhos-linhas2" alt="" />
         </div>
         <a class="trabalhos-skills" href="/html/skills.html">skills</a>
         <div class="trabalhos-descricao">
@@ -220,27 +220,42 @@
           <div class="contato-links">
             <a
               href="https://www.linkedin.com/in/thales-varga-11b83033a/"
-              rel="noopener noreferrer" target="_blank"
+              rel="noopener noreferrer"
+              target="_blank"
               >Linke<strong class="contato-strong">din</strong></a
             >
-            <a href="https://github.com/thalesvarga" rel="noopener noreferrer" target="_blank">
+            <a
+              href="https://github.com/thalesvarga"
+              rel="noopener noreferrer"
+              target="_blank"
+            >
               Gi<strong class="contato-strong">th</strong>ub</a
             >
             <a
               href="https://www.instagram.com/thalesvarga"
-              rel="noopener noreferrer" target="_blank"
+              rel="noopener noreferrer"
+              target="_blank"
               >ins<strong class="contato-strong">tagram</strong></a
             >
             <a
               href="mailto:thalesbarga@gmail.com"
-              rel="noopener noreferrer" target="_blank"
+              rel="noopener noreferrer"
+              target="_blank"
               >Email</a
             >
-            <a href="https://wa.me/5511967393632" rel="noopener noreferrer" target="_blank"
-            >Whats</a>
+            <a
+              href="https://wa.me/5511967393632"
+              rel="noopener noreferrer"
+              target="_blank"
+              >Whats</a
+            >
           </div>
           <div class="contato-descricao">
-            <p>Alguma dúvida ou faltou algo? <br><strong class="contato-strong">Me chama!</strong></p>
+            <p>
+              Alguma dúvida ou faltou algo? <br /><strong class="contato-strong"
+                >Me chama!</strong
+              >
+            </p>
           </div>
           <div class="contato-nome">
             <h1>Thales Varga</h1>
